--- a/youtube.html
+++ b/youtube.html
@@ -12,7 +12,7 @@
     <nav class="d-flex">
       <div class="nav-left d-flex">
         <img class="menu-icon" src="./images/images/hamburger.png" alt="" />
-        <a href="./index.html">
+        <a href="./youtube.html">
           <img class="ytLogo" src="./images/images/ytIcon.png" alt="" />
         </a>
       </div>
