--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youtube</title>
+    <link rel="icon" href="./images/images/favIcon.png" type="image/png">
+
    <link href="./styles/headers.css" rel="stylesheet" />
     <link href="./styles/sideSection.css" rel="stylesheet" />
     <link href="./styles/mainSection.css" rel="stylesheet" />
