--- a/video.html
+++ b/video.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Youtube</title>
+    <link rel="icon" href="./images/images/favIcon.png" type="image/png">
     <link href="./styles/headers.css" rel="stylesheet" />
     <link href="./styles/video.css" rel="stylesheet" />
   </head>
